welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:5: error: value et is not a member of Boolean
    if (date>=8 & date<=10 et you > 2) {
                           ^